# Caltech101-MiniProject

./: .gitignore  README.md  pyproject.toml
outputs/checkpoints/: hog_lr_img64_model.pkl
outputs/logs/: cnn_results_all.json  efficientnet_b0_img128_aug0_adam_classification_report.txt  efficientnet_b0_img128_aug0_adam_history.json  efficientnet_b0_img128_aug0_adam_results.json  efficientnet_b0_img128_aug0_adamw_classification_report.txt  efficientnet_b0_img128_aug0_adamw_history.json  efficientnet_b0_img128_aug0_adamw_results.json  efficientnet_b0_img128_aug0_sgd_classification_report.txt  efficientnet_b0_img128_aug0_sgd_history.json  efficientnet_b0_img128_aug0_sgd_results.json  efficientnet_b0_img128_aug1_adam_classification_report.txt  efficientnet_b0_img128_aug1_adam_history.json  efficientnet_b0_img128_aug1_adam_results.json  efficientnet_b0_img128_aug1_adamw_classification_report.txt  efficientnet_b0_img128_aug1_adamw_history.json  efficientnet_b0_img128_aug1_adamw_results.json  efficientnet_b0_img128_aug1_sgd_classification_report.txt  efficientnet_b0_img128_aug1_sgd_history.json  efficientnet_b0_img128_aug1_sgd_results.json  efficientnet_b0_img224_aug0_adam_classification_report.txt  efficientnet_b0_img224_aug0_adam_history.json  efficientnet_b0_img224_aug0_adam_results.json  efficientnet_b0_img224_aug0_adamw_classification_report.txt  efficientnet_b0_img224_aug0_adamw_history.json  efficientnet_b0_img224_aug0_adamw_results.json  (+105 more)
report/: report.ltx
src/: config.py  eval.py  models.py  run_all.py  train.py  train_hog.py
